Added more MIME types

--- a/foobar2000.desktop
+++ b/foobar2000.desktop
@@ -6,6 +6,6 @@ Type=Application
 Exec=%BIN/foobar2000
 Terminal=false
 StartupNotify=true
-MimeType=audio/basic;audio/vnd.wav;audio/x-wav;audio/x-aiff;audio/ogg;audio/vorbis;audio/mpeg;audio/mp4;audio/aac
+MimeType=audio/basic;audio/vnd.wav;audio/x-wav;audio/x-aiff;audio/ogg;audio/vorbis;audio/x-vorbis+ogg;audio/mpeg;audio/mp4;audio/aac;audio/x-wavpack;application/vnd.apple.mpegurl
 Categories=AudioVideo;Audio;Player
 Icon=%ICON_DIR/foobar2000.png
